feat: add some classes and a placeholder to the skills input in index.html, modify sizes from some properties in style.css and contact.css & add a filter by tech name to the skills input in main.js and skills.js

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ ul {
 }
 
 form {
-  margin: 2rem;
+  padding: 2rem;
 }
 
 input {
@@ -84,7 +84,7 @@ input {
   color: var(--primary-color);
   font-family: var(--primary-font);
   padding: 0.5rem;
-  width: 10rem;
+  width: 18rem;
 }
 
 input:hover {
