--- a/components/About/about.css
+++ b/components/About/about.css
@@ -6,25 +6,23 @@
 }
 
 .rtc--cv-main-about-img_container {
-  height: 32rem;
+  height: 30rem;
   width: 18.75rem;
 }
 
 .rtc--cv-main-about-img {
   border-radius: 0.5rem;
-  height: 32rem;
+  height: 30rem;
 }
 
-.rtc--cv-main-about-text_container {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  justify-content: center;
-  max-width: 28.125rem;
-}
-
-.rtc--cv-main-about-text_container > ul {
+.rtc--cv-main-about-personal_info {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: center;
+}
+
+.rtc--cv-main-about-description_info {
+  padding: 2rem 0 0 0;
+  width: 28.125rem;
 }
