--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,7 @@ img {
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
 }
 
 ul {
