--- a/components/Skills/skills.css
+++ b/components/Skills/skills.css
@@ -1,3 +1,9 @@
+.rtc--cv-main-skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .rtc--cv-main-skills > form {
   display: flex;
   align-items: center;
@@ -14,11 +20,15 @@
 .rtc--cv-main-skills-item {
   background-color: var(--secondary-light-color);
   border-radius: 0.5rem;
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
   padding: 1rem;
   width: 18.75rem;
+}
+
+.rtc--cv-main-skills-item > form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.75rem;
 }
 
 .rtc--cv-main-skills-item_title {
