feat: add some style changes in the profile view in style.css and about.css mostly, and prepare the folder Projects to create a projects view on the next days

--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -2,7 +2,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2rem 2rem 3rem 2rem;
+  min-width: 280px;
+  padding: 2rem 2rem 4rem 2rem;
 }
 
 header > nav {
