--- a/components/About/about.css
+++ b/components/About/about.css
@@ -1,25 +1,26 @@
 .rtc--cv-main-about_container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 3rem;
-  justify-content: space-evenly;
+  margin: 0 2rem 2rem 2rem;
 }
 
 .rtc--cv-main-about-img_container {
-  height: 30rem;
-  width: 18.75rem;
+  display: flex;
+  justify-content: center;
 }
 
 .rtc--cv-main-about-img {
   border-radius: 0.5rem;
   height: 30rem;
+  width: 18.75rem;
 }
 
 .rtc--cv-main-about-personal_info {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  justify-content: center;
+  align-items: center;
 }
 
 .rtc--cv-main-about-networks_info {
@@ -38,6 +39,31 @@
 }
 
 .rtc--cv-main-about-description_info {
-  padding: 2rem 0 0 0;
-  width: 28.125rem;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 460px) {
+  .rtc--cv-main-about-personal_info {
+    align-items: flex-start;
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 898px) {
+  .rtc--cv-main-about_container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .rtc--cv-main-about-personal_info {
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 2.25rem;
+  }
+
+  .rtc--cv-main-about-description_info {
+    width: 28.125rem;
+  }
 }
