--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   font-family: var(--primary-font);
   font-weight: 400;
   line-height: 1.5;
+  min-width: 280px;
 }
 
 a,
@@ -57,14 +58,6 @@ h2 {
   font-size: var(--secondary-font-size);
 }
 
-img {
-  width: 100%;
-}
-
-section {
-  padding: 0 2rem 2rem 2rem;
-}
-
 ul {
   list-style: none;
   padding: 0;
@@ -81,7 +74,6 @@ input {
   color: var(--primary-color);
   font-family: var(--primary-font);
   padding: 0.5rem;
-  width: 18rem;
 }
 
 input:hover {
@@ -92,4 +84,10 @@ footer {
   display: flex;
   justify-content: center;
   padding: 2rem;
+}
+
+@media screen and (min-width: 898px) {
+  input {
+    width: 18rem;
+  }
 }
