feat: create a Projects view when its anchor is clicked with all the finished projects from data.js using projects.js and the styles from projects.css & render them into main.js

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ input:hover {
 footer {
   display: flex;
   justify-content: center;
-  padding: 2rem;
+  padding: 8rem 2rem 2rem 2rem;
 }
 
 @media screen and (min-width: 898px) {
