--- a/components/About/about.css
+++ b/components/About/about.css
@@ -1,31 +1,32 @@
 .rtc--cv-main-about_container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
-  margin: 0 2rem 2rem 2rem;
+  gap: 1.5rem;
+  margin: 0 2rem 3rem 2rem;
 }
 
 .rtc--cv-main-about-img_container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .rtc--cv-main-about-img {
-  border-radius: 0.5rem;
-  height: 30rem;
-  width: 18.75rem;
+  border-radius: 0.75rem;
+  height: 32rem;
+  width: 100%;
 }
 
 .rtc--cv-main-about-personal_info {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   align-items: center;
 }
 
 .rtc--cv-main-about-networks_info {
   display: flex;
-  gap: 0.75rem;
+  gap: 1.6rem;
 }
 
 .rtc--cv-main-about-networks_info > a > img {
@@ -33,20 +34,21 @@
   width: 1.5rem;
 }
 
-.rtc--cv-main-about-networks_info > a > img:hover,
-.rtc--cv-main-about-networks_info > a > span:hover {
-  outline: 0.2rem solid var(--tertiary-color);
-}
-
 .rtc--cv-main-about-description_info {
   display: flex;
   flex-direction: column;
 }
 
+@media screen and (max-width: 300px) {
+  .rtc--cv-main-about-img {
+    height: 24rem;
+  }
+}
+
 @media screen and (max-width: 460px) {
   .rtc--cv-main-about-personal_info {
     align-items: flex-start;
-    padding: 0 3rem;
+    padding: 0 1.5rem;
   }
 }
 
@@ -61,6 +63,11 @@
     align-items: flex-start;
     justify-content: center;
     padding-left: 2.25rem;
+  }
+
+  .rtc--cv-main-about-networks_info > a > img:hover,
+  .rtc--cv-main-about-networks_info > a > span:hover {
+    outline: 0.2rem solid var(--tertiary-color);
   }
 
   .rtc--cv-main-about-description_info {
