--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   justify-content: space-between;
   min-width: 280px;
-  padding: 2rem 2rem 4rem 2rem;
+  padding: 2rem 2rem 3rem 2rem;
 }
 
 header > nav {
@@ -12,17 +12,8 @@ header > nav {
 
 header > nav > ul {
   display: flex;
+  gap: 0.25rem;
   justify-content: space-around;
-}
-
-header > nav > ul > li:hover > a {
-  color: var(--quaternary-color);
-}
-
-header > nav > ul > li:hover,
-.rtc--cv-header-logo-img:hover {
-  cursor: pointer;
-  outline: 0.2rem solid var(--tertiary-color);
 }
 
 .rtc--cv-header-logo-img {
@@ -37,7 +28,6 @@ header > nav > ul > li:hover,
   align-items: center;
   border-radius: 1rem;
   height: 2.5rem;
-  padding: 1rem;
 }
 
 .rtc--cv-header-nav-skills > a {
@@ -50,4 +40,30 @@ header > nav > ul > li:hover,
 
 .rtc--cv-header-nav-contact > a {
   width: 4.1rem;
+}
+
+@media screen and (max-width: 300px) {
+  header {
+    padding: 2rem 1rem 3rem 1rem;
+  }
+
+  header > nav {
+    width: 75%;
+  }
+
+  header > nav > ul {
+    gap: 0;
+  }
+}
+
+@media screen and (min-width: 898px) {
+  header > nav > ul > li:hover > a {
+    color: var(--quaternary-color);
+  }
+
+  header > nav > ul > li:hover,
+  .rtc--cv-header-logo-img:hover {
+    cursor: pointer;
+    outline: 0.2rem solid var(--tertiary-color);
+  }
 }
