--- a/components/About/about.css
+++ b/components/About/about.css
@@ -1,19 +1,20 @@
 .rtc--cv-main-about_container {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 3.5rem;
   margin: 0 2rem 3rem 2rem;
 }
 
 .rtc--cv-main-about-img_container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .rtc--cv-main-about-img {
   border-radius: 0.75rem;
-  height: 32rem;
+  height: 24rem;
   width: 100%;
 }
 
@@ -21,12 +22,14 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  align-items: center;
+  align-items: flex-start;
+  padding: 0 1.5rem;
 }
 
 .rtc--cv-main-about-networks_info {
   display: flex;
-  gap: 1.6rem;
+  gap: 1.25rem;
+  justify-content: space-evenly;
 }
 
 .rtc--cv-main-about-networks_info > a > img {
@@ -39,38 +42,69 @@
   flex-direction: column;
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (min-width: 300px) {
   .rtc--cv-main-about-img {
-    height: 24rem;
+    width: 14rem;
   }
-}
 
-@media screen and (max-width: 460px) {
   .rtc--cv-main-about-personal_info {
-    align-items: flex-start;
-    padding: 0 1.5rem;
+    padding: 0 3rem;
   }
 }
 
-@media screen and (min-width: 898px) {
+@media screen and (min-width: 360px) {
+  .rtc--cv-main-about-personal_info {
+    padding: 0 4.5rem;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  .rtc--cv-main-about-personal_info {
+    padding: 0 6rem;
+  }
+}
+
+@media screen and (min-width: 450px) {
+  .rtc--cv-main-about-personal_info {
+    padding: 0 7.5rem;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .rtc--cv-main-about-img {
+    height: 28rem;
+    width: 16rem;
+  }
+
+  .rtc--cv-main-about-personal_info {
+    padding: 0 8.5rem;
+  }
+}
+
+@media screen and (min-width: 720px) {
   .rtc--cv-main-about_container {
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  }
+
+  .rtc--cv-main-about-img {
+    height: 24rem;
+    width: 16rem;
   }
 
   .rtc--cv-main-about-personal_info {
     align-items: flex-start;
-    justify-content: center;
+    padding-top: 2.25rem;
     padding-left: 2.25rem;
   }
 
-  .rtc--cv-main-about-networks_info > a > img:hover,
-  .rtc--cv-main-about-networks_info > a > span:hover {
+  .rtc--cv-main-about-networks_info > a > img:hover {
+    padding: 0.15rem;
     outline: 0.2rem solid var(--tertiary-color);
   }
+}
 
-  .rtc--cv-main-about-description_info {
-    width: 28.125rem;
+@media screen and (min-width: 960px) {
+  .rtc--cv-main-about_container {
+    padding: 0 10rem;
   }
 }
