--- a/components/Projects/projects.css
+++ b/components/Projects/projects.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 3rem 10rem 0 10rem;
+  padding: 3rem 2rem 0 2rem;
 }
 
 .rtc--cv-main-projects-item {
@@ -16,21 +16,20 @@
 
 .rtc--cv-main-projects-item_link {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 3rem;
-  justify-content: space-around;
   cursor: pointer;
 }
 
 .rtc--cv-main-projects-item_link > .rtc--cv-main-projects-item_title {
   cursor: pointer;
   text-align: center;
-  width: 20rem;
+  width: 16rem;
 }
 
 .rtc--cv-main-projects-item_link:hover,
 .rtc--cv-main-projects-item_title:hover {
-  color: var(--quinary-color);
+  color: var(--quaternary-color);
 }
 
 .rtc--cv-main-projects-item_preview {
@@ -39,45 +38,19 @@
   width: 10rem;
 }
 
-@media screen and (min-width: 898px) {
-  .rtc--cv-main-projects > h2 {
-    text-align: center;
-  }
-
+@media screen and (min-width: 460px) {
   .rtc--cv-main-projects_list {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem 10rem 0 10rem;
+    padding: 3rem 4rem 0 4rem;
   }
+}
 
-  .rtc--cv-main-projects-item {
-    background-color: var(--secondary-light-color);
-    border-radius: 0.5rem;
+@media screen and (min-width: 720px) {
+  .rtc--cv-main-projects_list {
+    padding: 3rem 8rem 0 8rem;
   }
 
   .rtc--cv-main-projects-item_link {
-    display: flex;
-    align-items: center;
-    gap: 3rem;
+    flex-direction: row;
     justify-content: space-around;
-    cursor: pointer;
-  }
-
-  .rtc--cv-main-projects-item_link > .rtc--cv-main-projects-item_title {
-    cursor: pointer;
-    text-align: center;
-    width: 20rem;
-  }
-
-  .rtc--cv-main-projects-item_link:hover,
-  .rtc--cv-main-projects-item_title:hover {
-    color: var(--quinary-color);
-  }
-
-  .rtc--cv-main-projects-item_preview {
-    border-radius: 0.5rem;
-    height: 6rem;
-    width: 10rem;
   }
 }
