--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -19,33 +19,6 @@ header > nav > ul > li:hover > a {
   color: var(--quaternary-color);
 }
 
-.rtc--cv-header-logo-img {
-  height: 2.5rem;
-  width: 2.5rem;
-}
-
-.rtc--cv-header-logo-img:hover {
-  cursor: pointer;
-  padding: 0.15rem;
-  outline: 0.2rem solid var(--tertiary-color);
-}
-
-.rtc--cv-header-nav-skills,
-.rtc--cv-header-nav-projects {
-  display: flex;
-  align-items: center;
-  border-radius: 1rem;
-  height: 2.5rem;
-}
-
-.rtc--cv-header-nav-skills > a {
-  width: 3.6rem;
-}
-
-.rtc--cv-header-nav-projects > a {
-  width: 4.75rem;
-}
-
 @media screen and (min-width: 360px) {
   header {
     padding: 2rem 2rem 3rem 2rem;
@@ -64,6 +37,9 @@ header > nav > ul > li:hover > a {
 
 @media screen and (min-width: 720px) {
   header {
-    padding: 2rem 2rem 4rem 2rem;
+    padding: 2rem 2rem 6rem 2rem;
+  }
+  header > nav > ul {
+    justify-content: space-evenly;
   }
 }
