--- a/components/Main/Skills/skills.css
+++ b/components/Main/Skills/skills.css
@@ -1,3 +1,18 @@
+input {
+  justify-content: center;
+  background-color: var(--secondary-color);
+  border-color: var(--primary-grey-color);
+  border-radius: 0.5rem;
+  color: var(--primary-color);
+  font-family: var(--primary-font);
+  padding: 0.5rem;
+  width: 12rem;
+}
+
+input:hover {
+  border-color: var(--tertiary-color);
+}
+
 .rtc--cv-main-skills {
   display: flex;
   flex-direction: column;
@@ -34,4 +49,10 @@
 
 .rtc--cv-main-skills-item_title {
   color: var(--quaternary-color);
+}
+
+@media screen and (min-width: 660px) {
+  input {
+    width: 17.5rem;
+  }
 }
