--- a/components/Footer/footer.css
+++ b/components/Footer/footer.css
@@ -1,11 +1,13 @@
+@import '../../css/style.css';
+
 footer {
   display: flex;
   justify-content: center;
-  padding: 3rem 1rem 2rem 1rem;
+  padding: var(--padding-footer-s);
 }
 
 @media screen and (min-width: 360px) {
   footer {
-    padding: 6rem 2rem 2rem 2rem;
+    padding: var(--padding-footer-m);
   }
 }
